--- a/clojure-stuff/bases/web/resources/public/web/index.html
+++ b/clojure-stuff/bases/web/resources/public/web/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- {:hyperfiddle.electric-ring-adapter3/electric-user-version "$:hyperfiddle.electric-ring-adapter3/electric-user-version$"} -->
         <meta charset="utf-8"/>
-        <title>Hyperfiddle</title>
+        <title>Agent From Scratch</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- <link rel="stylesheet" href="/index.css" type="text/css" media="screen" /> -->
         <!-- $key$ is a template string. See electric-starter-app.server-jetty/wrap-index-page -->
