--- a/clojure-stuff/bases/web/resources/public/web/index.html
+++ b/clojure-stuff/bases/web/resources/public/web/index.html
@@ -4,6 +4,7 @@
         <!-- {:hyperfiddle.electric-ring-adapter3/electric-user-version "$:hyperfiddle.electric-ring-adapter3/electric-user-version$"} -->
         <meta charset="utf-8"/>
         <title>Agent From Scratch</title>
+        <link href="/css/output.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- <link rel="stylesheet" href="/index.css" type="text/css" media="screen" /> -->
         <!-- $key$ is a template string. See electric-starter-app.server-jetty/wrap-index-page -->
