--- a/clojure-stuff/bases/web/resources/public/web/index.html
+++ b/clojure-stuff/bases/web/resources/public/web/index.html
@@ -10,5 +10,6 @@
         <!-- $key$ is a template string. See electric-starter-app.server-jetty/wrap-index-page -->
         <script defer type="text/javascript" src="$:hyperfiddle.client.module/main$"></script>
     </head>
-    <body></body>
+    <body>
+    </body>
 </html>
